Netflix | Fix Flex issue on firefox

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -52,5 +52,4 @@
     rgba(37, 37, 37, 0.61),
     #111
   );
-  margin-left: -30px;
 }
