--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -1,17 +1,18 @@
 .row {
   margin-left: 20px;
   color: #fff;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  scrollbar-width: none;
 }
 
 .row__posters {
-  display: flex;
-  overflow-y: hidden;
-  overflow-x: scroll;
+  display: inline-flex;
   padding: 20px;
   padding-left: 0;
 }
 
-.row__posters::-webkit-scrollbar {
+.row::-webkit-scrollbar {
   display: none;
 }
 
